# mcp-generate-test-plane

./: README.md  pyproject.toml  requirements.txt  run_complete_testing_pipeline.py
client/: client.py  config_test_case_client.py  test_case_client.py
config/: test_config.json
docs/: architecture.md  process_flow.md
input/: clo.txt  openapi.json  urls.txt
mcp_pytest/: README.md  client.py  demo.py  requirements.txt  server.py  simple_client.py
output/: test_cases.json  test_cases.xlsx  test_plan.md
server/: __init__.py  preprocess.py  test_case_generator.py  test_plan_generator.py  url_fetcher.py  validation.py
