[project]
name = "mcp-generate-test-plane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "fastmcp>=2.9.2",
    "langchain-groq>=0.3.4",
    "mcp-use>=1.3.3",
    "mcp[cli]>=1.9.4",
    "openai>=1.93.0",
    "pytest>=8.4.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.3.0",
    "openpyxl>=3.1.5",
    "xlsxwriter>=3.2.5",
]
